--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,11 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+    background-color: #1C6758 !important;
+
   -webkit-font-smoothing: antialiased;
-  background-color: #D6CDA4 !important;
   -moz-osx-font-smoothing: grayscale;
 }
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -74,6 +74,7 @@ header a {
   color: #333;
 }label, input {
   display: block;
+  text-align: left !important;
 }
 input {
   padding: 10px;
@@ -84,6 +85,7 @@ input {
   border-radius: 4px;
   box-sizing: border-box;
 }
+
 form button {
   background: var(--primary);
   border: 0;
@@ -106,7 +108,7 @@ div.error {
   -o-border-radius: 4px;
 }
 table  tr td{
-  color: #1C6758 !important;
+  color: #D6CDA4 !important;
   padding-bottom: 70px;
 }
 form button{
@@ -136,4 +138,24 @@ button{
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
 }
-
+label{
+  font-size: 20px;
+  text-align: left !important;
+}
+ 
+.signup-form{
+  width: 600px;
+   padding: 50px;
+   margin-top: 120px;
+   margin: 200px auto auto auto;
+   /* padding-top: 150px; */
+   height: 100%;
+ 
+   background-color: #fff;
+ }
+ .form-signup{
+  padding-bottom: 100px;
+ }
+ .signup-form input{
+  outline: none;
+ }
